--- a/src/main/resources/templates/th/main/storeMain.html
+++ b/src/main/resources/templates/th/main/storeMain.html
@@ -19,17 +19,16 @@
             <div class="virtualized-list row" style="padding-top: 0px; transform: translateY(0px);">
                 <tr th:each="products : ${mainList}">
                     <div class="col-6 col-md-3 product-item-wrap">
-                        <article class="production-item"><a class="production-item__overlay" href=""></a>
+                        <article class="production-item"><a class="production-item__overlay" th:href="@{/productions/productDetails(productNo=${products.productNo})}"></a>
                             <div class="production-item-image production-item__image">
                                 <img class="image" alt="" th:src="@{'/uploadImg/'+${products.productMainImg}}"
                                      srcset="">
                             </div>
                             <div class="production-item__content">
                                 <h1 class="production-item__header">
-                                    <span class="production-item__header__brand"
-                                          th:text="${products.sellerName}"></span>
-                                    <span class="production-item__header__name"
-                                          th:text="${products.productName}"></span></h1>
+                                    <span class="production-item__header__brand" th:text="${products.sellerName}"></span>
+                                    <span class="production-item__header__name" th:text="${products.productName}"></span>
+                                </h1>
                                 <span class="production-item-price">
                             <span class="production-item-price__price" th:text="${products.customerPrice}"></span>
                         </span>
