--- a/src/main/resources/templates/th/fragments/config.html
+++ b/src/main/resources/templates/th/fragments/config.html
@@ -15,7 +15,7 @@
             crossorigin="anonymous"></script>
 
     <link rel="stylesheet" th:href="@{css/nav.css}">
-<!--    <link rel="stylesheet" th:href="@{/css/mainNavigation.css}">-->
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
     <link rel="stylesheet" th:href="@{/css/basicComponent.css}">
 
 
