--- a/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
+++ b/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
@@ -15,18 +15,44 @@
 
 <!-- 차트 div -->
 <!-- 차트 1 -->
-<div id="name" style="width:100%; height:60px">
-    <canvas id="myChart" style="width:10%; height:100%; float:left"></canvas>
-</div>
-<!-- 차트 2 -->
-<div id="name2" style="width:100%; height:70px">
-    <canvas id="myChart2" style="width:10%; height:100%; float:left"></canvas>
-</div>
-<!-- 차트 3 -->
-<div name="myShow" style="width:100%; height:60px">
-    <canvas id="myChart3" style="width:10%; height:100%; float:left"></canvas>
-</div>
+<div>
+    회사명 입력 <input type="text" value="" id="sellerName">
+        <button name="sellerBtn" onsubmit="true" onclick="sellerBtn()">제출</button>
 
+        <div id="name" style="width:35%; height:50px">
+            <canvas id="myChart" style="width:35%; height:100%; float:left"></canvas>
+        </div>
+        <!-- 차트 2 -->
+        <div id="name2" style="width:35%; height:50px">
+            <canvas id="myChart2" style="width:35%; height:100%; float:left; display: none"></canvas>
+        </div>
+        <!-- 차트 3 -->
+        <div name="myShow" style="width:35%; height:50px">
+            <canvas id="myChart3" style="width:35%; height:100%; float:left; display: none"></canvas>
+        </div>
+</div>
+<script type="text/javascript">
+    function sellerBtn() {
+        var sellerName = document.getElementById("sellerName").value;
+        console.log("sellerName : "+sellerName);
+        var sellform ={
+            sellerName : sellerName
+        }
+        $.ajax({
+            //console.log("hi");
+            url: "sellerGraphAjax",
+            type: "POST",
+            data: sellform,
+            success: function (data) {
+                alert("suc");
+            },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
+            error: function () {
+                alert("test err");
+            }
+        });
+    }
+
+</script>
 <!-- 차트 div 끝 -->
 <!-- layer 버튼 시작 -->
 <!-- <button name = "myShow2" onclick=showHide2();> layer2 </button><br>  버튼 필요 없으면 삭제 예정-->
@@ -115,15 +141,20 @@
     var json = [[${jsonText}]];
     var yearList = [[${yearList}]];
     console.log("안녕하세요 yearList입니다 : " + yearList);
-    console.log(json);
+    console.log(json); // year, productName, orderQty
     var jsonParse = JSON.parse(json);
     var chart1Arr = new Array();
     var yearArr = new Array();
+    var yearArr2 = new Array();
+    var productNo = new Array();
     for (var i = 0; i < jsonParse.length; i++) {
-        chart1Arr[i] = jsonParse[i].productQty;
+        chart1Arr[i] = jsonParse[i].orderQty;
+        productNo[i] = jsonParse[i].productNo; // 품목명을 입력 받아서  날짜ㅡㅣ판매량
+        yearArr2[i] = jsonParse[i].year;                                        // 날짜를 입력 받아서 품목 ㅡ ㅣ 판매량
         //yearArr[i] = jsonParse[i].productionDay;
     }
     console.log(chart1Arr + "" + yearArr);
+    console.log("productNo : "+productNo);
 
 
     //var productArray2 = new Array(6);
@@ -160,9 +191,9 @@
 
     // 차트 data
     var chart1Data = {
-        labels: yearList,
+        labels: [1, 2, 3, 4, 5, 6],
         datasets: [{
-            label: 'product of Votes',
+            label: productNo,
             data: chart1Arr, // 판매량 1, 품목, 날짜 ==== 0507날짜의 판매량 1위~6위 품목
             backgroundColor: backC,
             borderColor: borderC,
@@ -170,31 +201,17 @@
         }]
     };
 
-    var chart2Data = {
-        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-        datasets: [{
-            label: '# of Votes',
-            data: [1, 2, 3, 4, 5, 6], // 판매량 1, 품목, 날짜 ==== 0507날짜의 판매량 1위~6위 품목
-            backgroundColor: backC,
-            borderColor: borderC,
-            borderWidth: 1
-        }]
-    };
-
-    var chart3Data = {
-        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-        datasets: [{
-            label: '# of Votes',
-            data: [11, 22, 33, 44, 55, 66], // 판매량 1, 품목, 날짜 ==== 0507날짜의 판매량 1위~6위 품목
-            backgroundColor: backC,
-            borderColor: borderC,
-            borderWidth: 1
-        }]
-    };
-
-    // 1번째 차트 @@@@@@@@@@@@@@@@@@
 
 
+
+
+
+
+    var monthData; //var monthData = [[${monthJsonText}]];
+    var dayData;    //var dayData = [[${dayJsonText}]];
+    var monthLabel;
+    var yearLabel;
+    // 1번째 차트 ajax@@@@@@@@@@@@@@@@@@
     $(document).ready(
         function () {
             var chart1Canvas = document.getElementById("myChart");
@@ -211,28 +228,28 @@
                 } else {
                     document.getElementById("myChart2").style.display = 'none';
                 }
-                var activePoints = myNewChart.getElementsAtEvent(evt); // aP선언
-
+                var activePoints = myNewChart.getElementsAtEvent(evt); // activePoints선언
+                console.log("activePoints: "+activePoints);
                 if (activePoints[0]) {
                     var chartData = activePoints[0]['_chart'].config.data;
                     var idx = activePoints[0]['_index'];
 
-                    var label = chartData.labels[idx];
+                    yearLabel = chartData.labels[idx];
                     var value = chartData.datasets[0].data[idx];
                     var labels = chartData.labels[idx];
-                    var form = {
-                        quantity: value,
-                        year: label
+                    var yearform = {
+                        product: productNo[0],
+                        year: yearLabel
                     }
-                    console.log("quantity : " + value);
-                    console.log("year : " + label);
+                    console.log("product : " + productNo[0]);
+                    console.log("year : " + yearLabel);
                     $.ajax({
                         //console.log("hi");
                         url: "yearGraphAjax",
                         type: "POST",
-                        data: form,
+                        data: yearform,
                         success: function (data) {
-                            $('#result').text(data);
+                            chart2(); // ajax 성공시 chart2() 호출
                         },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
                         error: function () {
                             alert("test err");
@@ -249,13 +266,25 @@
         }
     );
 
-    //2번 차트@@@@@@@@@@
+    //2번 차트 ajax@@@@@@@@@@
 
-    $(document).ready(
-        function () {
+
+        function chart2() {
+
+            var chart2Data = {
+                labels: [1, 2, 3, 4, 5, 6], // month 들어갈 자리
+                datasets: [{
+                    label: '품목명', // 품목명
+                    data: [1, 2, 3, 4, 5, 6], // 달당 수량
+                    backgroundColor: backC,
+                    borderColor: borderC,
+                    borderWidth: 1
+                }]
+            };
+
             var chart2Canvas = document.getElementById("myChart2");
-            var ctx = chart2Canvas.getContext('2d');
-            var chart2 = new Chart(ctx, {
+            var ctx2 = chart2Canvas.getContext('2d');
+            var chart2 = new Chart(ctx2, {
                 type: 'bar',
                 data: chart2Data,
                 options: options
@@ -268,50 +297,91 @@
                 }
 
                 var activePoints = chart2.getElementsAtEvent(evt); // aP선언
-
+                console.log("activePoints: "+activePoints);
                 if (activePoints[0]) {
                     var chartData = activePoints[0]['_chart'].config.data;
+                    console.log("chartData : "+chartData);
                     var idx = activePoints[0]['_index'];
+                    console.log("idx : " + idx);
 
-                    var label = chartData.labels[idx];
+                    monthLabel = chartData.labels[idx];
+                    console.log("label : " + monthLabel);
+
                     var value = chartData.datasets[0].data[idx];
+                    console.log("value : " + value);     //label : month,
 
-                    var url = "http://example.com/?label=" + label + "&value=" + value;
+                    var url = "http://example.com/?label=" + monthLabel + "&value=" + value;
                     console.log(url);
+
                     alert(url);
+
+                    var monthform = {
+                        product: productNo[0],
+                        year : yearLabel,
+                        month: monthLabel
+                    }
+                    console.log("product : " + productNo[0]);
+                    console.log("month : " + monthLabel);
                     //location.replace(url);
+                    $.ajax({
+                        //console.log("hi");
+                        url: "monthGraphAjax",
+                        type: "POST",
+                        async : false,
+                        data: monthform,
+                        success: function (data) {
+                            monthData = data;
+                            console.log(data);
+                            console.log(monthData);
+                            chart3();
+                        },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
+                        error: function () {
+                            alert("test err");
+                        }
+                    });
                 }
             };
         }
-    );
 
-    $(document).ready(
-        function () {
+
+
+        function chart3() {
+            var chart3Data = {
+                labels: [monthData, monthData, 3, 4, 5, 6], //day 들어갈 자리
+                datasets: [{
+                    label: '품목명',   // 품목명
+                    data: [11, 22, 33, 44, 55, 66], // 일당 수량
+                    backgroundColor: backC,
+                    borderColor: borderC,
+                    borderWidth: 1
+                }]
+            };
             var chart3Canvas = document.getElementById("myChart3");
-            var ctx = chart3Canvas.getContext('2d');
-            var chart3 = new Chart(ctx, {
+            var ctx3 = chart3Canvas.getContext('2d');
+            var chart3 = new Chart(ctx3, {
                 type: 'bar',
                 data: chart3Data,
                 options: options
             });
             chart3Canvas.onclick = function (evt) {
                 var activePoints = chart3.getElementsAtEvent(evt); // aP선언
-
+                console.log("activePoints: "+activePoints);
                 if (activePoints[0]) {
                     var chartData = activePoints[0]['_chart'].config.data;
                     var idx = activePoints[0]['_index'];
 
-                    var label = chartData.labels[idx];
+                    var label = chartData.labels[idx]; // label = day
                     var value = chartData.datasets[0].data[idx];
 
                     var url = "http://example.com/?label=" + label + "&value=" + value;
                     console.log(url);
                     alert(url);
+
                     //location.replace(url);
                 }
             };
         }
-    );
+
 
     /*
      make sure click was on an actual point
