--- a/src/main/resources/templates/th/member/payment/payment.html
+++ b/src/main/resources/templates/th/member/payment/payment.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      <!--layout:decorator="th/layout/defaultLayout"-->> <!-- 이거 쓰면 이니시스 안먹힘 -->
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" media="screen"
-          href="https://d1nyaccf3kuclt.cloudfront.net/assets/v3/layout/application_react-c68374e516e05258989e1c408ec53ff0ffa468ef1755a945c31caf2e365af3d0.css">
-    <link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/7-e75c67c6.chunk.css">
-    <link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/19-dfb1ddc9.chunk.css">
-    <link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/App-11020a1b.css">
-    <link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/16-82708389.chunk.css">
-    <link rel="stylesheet" media="screen"
-          href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/templates-Commerce-Cart-7a3e77c9.chunk.css">
+<!--<link rel="stylesheet" media="screen"
+          href="https://d1nyaccf3kuclt.cloudfront.net/assets/v3/layout/application_react-c68374e516e05258989e1c408ec53ff0ffa468ef1755a945c31caf2e365af3d0.css">-->
+    <!--<link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/7-e75c67c6.chunk.css">-->
+    <!--<link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/19-dfb1ddc9.chunk.css">-->
+    <!--<link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/App-11020a1b.css"> this is footer -->
+    <!--<link rel="stylesheet" media="screen" href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/16-82708389.chunk.css">-->
+   <!-- <link rel="stylesheet" media="screen"
+          href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/templates-Commerce-Cart-7a3e77c9.chunk.css">-->
     <link rel="stylesheet" media="all" href="https://d1nyaccf3kuclt.cloudfront.net/assets/v2/orders/pre_order-a9341d94d054b478694e31b559c91d4c6f9004f1819d278a88456fa32578bff9.css">
+<!-- <th:block layout:fragment="css">
+        <link rel="stylesheet" th:href="@{/css/mainContent.css}">
+        <link rel="stylesheet" th:href="@{/css/basket.css}">
 
+    </th:block>-->
 </head>
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script src="/resources/js/addressapi.js"></script>
 <body>
 
-<div class="sticky-child layout-navigation-primary" style="position: fixed; left: 0px; right: 0px; top: 0px;">
+<!--<div class="sticky-child layout-navigation-primary" style="position: fixed; left: 0px; right: 0px; top: 0px;">
     <div class="layout-navigation-primary__content"><div class="layout-navigation-primary__leftmost">
         <button class="layout-navigation-bar-icon layout-navigation-bar-drawer-button" title="메뉴" aria-label="메뉴" type="button"><
             svg class="icon" width="24" height="24" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet"><path fill="currentColor
@@ -28,8 +34,8 @@
         </div>
         </div>
     </div>
-</div>
-
+</div>-->
+<div layout:fragment="content">
 <div id="body" class="orders pre_order" data-s_id="ad223c51bbde2a256a849d25cbb9b308" style="padding-bottom: 0px;">
 
     <div data-pre_order="{&quot;pre_order&quot;:{&quot;from&quot;:&quot;bucket&quot;,&quot;bucket&quot;:[&quot;53293825&quot;]},&quot;utf8&quot;:&quot;✓&quot;,&quot;controller&quot;:&quot;orders&quot;,&quot;action&quot;:&quot;pre_order&quot;}" id="pre_order_json" data-is_app="false"></div>
@@ -246,25 +252,25 @@
                 </div>
 
             </div>
-
+            <button onClick="requestPay()">이니시스 결제</button>
             <div class="panel">
                 <div class="title light">결제 수단</div>
                 <div class="pay_method">
                     <div class="payment_panel">
                         <input type="radio" value="kcp_credit_card" name="order[payment_method]" id="order_payment_method_kcp_credit_card">
-                        <label class="first  top" for="order_payment_method_kcp_credit_card"> <!-- 카드 label -->
+                        <form action="/kakaoPay">
+                        <label class="first  top" for="order_payment_method_kcp_credit_card" onclick="onsubmit=true"  > <!-- kakaoPay submit 어떻게? -->
                             <img class="img" width="64" src="" alt="Card">
-                            <div class="title">ㅇ</div>
+                            <div class="title" >카카오페이</div>
 
                             <div class="event" data-title="유의사항" data-detail1="-긴급재난지원금은 오늘의집에서 사용이 불가합니다" data-detail2="">
 
                             </div>
                         </label>            <input type="radio" value="without_bankbook" name="order[payment_method]" id="order_payment_method_without_bankbook">
-                        <label class=" top" for="order_payment_method_without_bankbook">
+                        </form>
+                        <label class=" top" for="order_payment_method_without_bankbook" onclick="requestPay()">
                             <img class="img" width="64" src="https://bucketplace-v2-development.s3.amazonaws.com/pg/vbank.png" alt="Vbank">
-                            <div class="title">무통장입금</div>
-                            <h2> 이니시스 이용하기</h2>
-
+                            <div class="title" >무통장입금</div>
                             <div class="event" data-title="" data-detail1="" data-detail2="">
 
                             </div>
@@ -302,6 +308,14 @@
                 결제하기</div>
         </form>
     </div>
+</div>
+</div>
+<button onClick="requestPay()">이니시스 결제</button>
+<script th:inline="javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+<form method="post" action="/kakaoPay">
+    <button>카카오페이로 결제하기</button>
+</form>
 <!--
 <form name="fr" onsubmit="return check()">
 
@@ -311,10 +325,11 @@
 -->
 
 
-</div>
 
 
 <script>
+
+
     function execPostCode() {
         new daum.Postcode({
             oncomplete: function(data) {
@@ -412,12 +427,7 @@
         });
     }
 </script>
-<button onClick="requestPay()">이니시스 결제</button>
-<script th:inline="javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
-<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
-<form method="post" action="/kakaoPay">
-    <button>카카오페이로 결제하기</button>
-</form>
+
 
 
 
