--- a/src/main/resources/templates/th/main/searchList.html
+++ b/src/main/resources/templates/th/main/searchList.html
@@ -18,7 +18,7 @@
                  style="padding-top: 0px; padding-bottom: 3888px; transform: translateY(0px);">
                 <tr th:each="products : ${productList}">
                     <div class="col-6 col-md-3 product-item-wrap">
-                        <article class="production-item"><a class="production-item__overlay" href=""></a>
+                        <article class="production-item"><a class="production-item__overlay" th:href="@{/productions/productDetails(productNo=${products.productNo})}"></a>
                             <div class="production-item-image production-item__image">
                                 <img class="image" alt="" th:src="@{'/uploadImg/'+${products.productMainImg}}" srcset="">
                             </div>
