--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -68,12 +68,15 @@
                             </li>
 
                             <div class="nav-wrapper">
-                                <form class="form-inline d-flex justify-content-center md-form form-sm mt-0">
-
-                                    <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
-                                           aria-label="Search"></input>
-                                    <i class="fas fa-search ml-2"> </i>
-
+                                <form class="form-inline ml-0 ml-md-3">
+                                    <div class="input-group input-group-sm">
+                                        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                                        <div class="input-group-append">
+                                            <button class="btn btn-navbar" type="submit">
+                                                <i class="fas fa-search"></i>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </form>
                             </div>
                         </ul>
