--- a/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
+++ b/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
@@ -12,9 +12,7 @@
 </div>
 <script type="text/javascript">
     var json = [[${jsonText}]];
-    var yearList = [[${yearList}]];
-    console.log("안녕하세요 yearList입니다 : " + yearList);
-    console.log(json); // year, productName, orderQty
+    console.log(json);
     var jsonParse = JSON.parse(json);
     var chart1Arr = new Array();
     var yearArr = new Array();
