--- a/src/main/resources/templates/th/main/storeMain.html
+++ b/src/main/resources/templates/th/main/storeMain.html
@@ -30,7 +30,7 @@
                                     <span class="production-item__header__name" th:text="${products.productName}"></span>
                                 </h1>
                                 <span class="production-item-price">
-                            <span class="production-item-price__price" th:text="${products.customerPrice}"></span>
+                            <span class="production-item-price__price" th:text="${#numbers.formatInteger(products.customerPrice, 3, 'COMMA')}"></span>
                         </span>
                             </div>
                         </article>
