--- a/src/main/resources/templates/th/askBoard/askBoardList.html
+++ b/src/main/resources/templates/th/askBoard/askBoardList.html
@@ -19,8 +19,9 @@
         </tr>
 
         <th:block th:each="board : ${list}">
-            <tr th:onclick="'location.href=\''+@{/askdetail/{askBoardno}(askBoardno=${board.askBoardno})}+'\''">
-                <td th:text="${board.askBoardno}"/>
+            <tr>
+                <td th:onclick="'location.href=\''+@{/askdetail/{askBoardno}(askBoardno=${board.askBoardno})}+'\''"
+                    th:text="${board.askBoardno}"/>
                 <td>
                     <th:block th:text="${board.askTitle}"/>
                 </td>
